2011-05-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/mingw/Makefile: Build support for lua tikz related TeX files.
	Use Makefile.maint to update version.c. Update install target to match
	directory layout of distribution and include share/lua/, share/LaTeX/, 
	contrib/, demo/, README, NEWS, Copyright and ChangeLog.

2011-05-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/variable.c (locale_handler): If built-in readline character input
	is to recognize UTF-8 characters via wcwidth(), it is necessary to 
	initialize the CTYPE locale on entry. "set encoding utf" is not
	sufficient.

2011-05-02  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/readline.c (tab_completion, fn_completion, readline) NEWS:
	Cycling variant of filename tab-completion for builtin readline.

	* src/stdfn.c|h (strnlen, strndup) configure.in config/config.nt
	config/config.mgw config/config.oww: Support functions used by
	tab-completion code.

	* src/stdfn.c|h (opendir, closedir, rewinddir): Add Kevlin Henney's
	POSIX directory browsing functions and types for Win32.

	* src/readline.c (mbwidth, isdoublewidth) configure.in: Determine
	on screen width of utf8 encoded characters with wcwidth() if
	provided by the system.

	* src/readline.c (delete_previous_word): Overprint with exact
	number of spaces, add NUL at eol.

2011-04-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/readline.c (clear_eoline): More efficient clear line algorithm.

2011-04-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/mouse.c (apply_zoom):  Prevent double-free of custom font for tic
	labels.
	Bug #3294915

2011-04-28  Bastian Maerkisch  <bmaerkisch@web.de>

	Support for (optional) antialiasing in windows terminal via GDI+.

	* config/config.mgw, config/config.nt: Compilers have support for
	GDI+: define HAVE_GDIPLUS. Note: OpenWatcom might not support GDI+
	* config/mingw/Makefile: Include new files wgdiplus.h|cpp in build,
	add library gdiplus.